--- a/plymouth-parks-footfall/footfall.html
+++ b/plymouth-parks-footfall/footfall.html
@@ -6,9 +6,9 @@
 		<!-- chart object sripts -->
 
 		<!-- CSS -->
-		<link rel="stylesheet" href="https://raw.githubusercontent.com/jargonautical/apps-dev/master/assets/10-header.css">
-		<link rel="stylesheet" href="https://raw.githubusercontent.com/jargonautical/apps-dev/master/assets/20-reset.css">
-		<link rel="stylesheet" href="https://raw.githubusercontent.com/jargonautical/apps-dev/master/assets/30-dash-style.css">
+		<link rel="stylesheet" href="assets/10-header.css">
+		<link rel="stylesheet" href="assets/20-reset.css">
+		<link rel="stylesheet" href="assets/30-dash-style.css">
   </head>
   <body>
 		<h2>JS, CSS & HTML version of Plymouth Parks heroku app.</h2>
